--- a/d3-coordinated-viz/css/style.css
+++ b/d3-coordinated-viz/css/style.css
@@ -1,9 +1,9 @@
 /* Stylesheet by Yuqi Shi, 2019 */
 
 .regions {
-    fill: #999;
-    stroke: #CCC;
-    stroke-width: 2px;
+    stroke: #000;
+    stroke-width: 0.5px;
+    stroke-linecap: round;
 }
 
 .gratLines {
@@ -18,5 +18,60 @@
 
 .map {
     border: medium solid #999;
+    margin: 10px 0 0 20px;
 }
 
+/* .chart {
+    background-color: rgba(128,128,128,.2);
+    border: medium solid #999;
+    float: right;
+    margin: 10px 20px 0 0;
+}
+
+.numbers {
+    fill: white;
+    font-family: sans-serif;
+	font-size: 5px
+}
+
+.chartTitle {
+    font-family: sans-serif;
+    font-size: 1.5em;
+    font-weight: bold;
+} */
+
+.chart {
+    float: right;
+    margin: 7px 20px 0 0;
+}
+
+.chartTitle {
+    font-family: sans-serif;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.chartBackground {
+    fill: rgba(128,128,128,.2);
+}
+
+.chartFrame {
+    fill: none;
+    stroke: #999;
+    stroke-width: 3px;
+    shape-rendering: crispEdges;
+}
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: #999;
+    stroke-width: 1px;
+    shape-rendering: crispEdges;
+}
+
+.axis text {
+    font-family: sans-serif;
+    font-size: 0.8em;
+    fill: #999;
+}
