--- a/d3-coordinated-viz/css/style.css
+++ b/d3-coordinated-viz/css/style.css
@@ -21,25 +21,6 @@
     margin: 10px 0 0 20px;
 }
 
-/* .chart {
-    background-color: rgba(128,128,128,.2);
-    border: medium solid #999;
-    float: right;
-    margin: 10px 20px 0 0;
-}
-
-.numbers {
-    fill: white;
-    font-family: sans-serif;
-	font-size: 5px
-}
-
-.chartTitle {
-    font-family: sans-serif;
-    font-size: 1.5em;
-    font-weight: bold;
-} */
-
 .chart {
     float: right;
     margin: 7px 20px 0 0;
@@ -47,7 +28,7 @@
 
 .chartTitle {
     font-family: sans-serif;
-    font-size: 1.5em;
+    font-size: 1.2em;
     font-weight: bold;
 }
 
@@ -72,6 +53,42 @@
 
 .axis text {
     font-family: sans-serif;
-    font-size: 0.8em;
+    font-size: 0.7em;
     fill: #999;
+}
+
+.dropdown {
+    position: absolute;
+    top: 30px;
+    left: 40px;
+    z-index: 10;
+    font-family: sans-serif;
+    font-size: 1em;
+    font-weight: bold;
+    padding: 2px;
+    border: 1px solid #999;
+    box-shadow: 2px 2px 4px #999;
+}
+
+option {
+    font-weight: normal;
+}
+
+.infolabel {
+    margin: 0 20px 0 0;
+    position: absolute;
+    height: 50px;
+    min-width: 100px;
+    color: #fff;
+    background-color: #000;
+    border: solid thin #fff;
+    padding: 5px 10px;
+    top: -75px;
+}
+
+.infolabel h1 {
+    margin: 0 20px 0 0;
+    padding: 0;
+    display: inline-block;
+    line-height: 1em;
 }
